--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 .square {
-    background-color: blue;
+    background-color: #000;
     width: 30px;
     height: 30px;
 
 }
 
-.square .hover {
-    background-color: tomato;
+.hover {
+    background-color: #fff;
 }
