--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+.grid {
+    display: grid;
+    grid-template-rows: repeat(16, 30px);
+    grid-template-columns: repeat(16, 30px);
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+
+}
+
 .square {
     background-color: #000;
     width: 30px;
