--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 .grid {
     display: grid;
+    width: 555px;
+    height: 555px;
     grid-template-rows: repeat(16, 30px);
     grid-template-columns: repeat(16, 30px);
     grid-row-gap: 5px;
