Adjusted grid to automatically resize elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,17 @@
 .grid {
     display: grid;
-    width: 555px;
-    height: 555px;
-    grid-template-rows: repeat(16, 30px);
-    grid-template-columns: repeat(16, 30px);
-    grid-row-gap: 5px;
-    grid-column-gap: 5px;
-
+    width: 660px;
+    height: 660px;
+    grid-template-rows: repeat(64, 1fr);
+    grid-template-columns: repeat(64, 1fr);
+    grid-row-gap: 1px;
+    grid-column-gap: 1px;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .square {
     background-color: #000;
-    width: 30px;
-    height: 30px;
-
 }
 
 .hover {
