--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,28 @@
+body {
+    background: #efefef;
+    font-family: monospace;
+}
+
+h1 {
+    text-transform: lowercase;
+    font-size: 50px;
+    padding-top: 10px;
+}
+
+#center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    min-width: 100vh;
+}
+
+.button {
+    font-family: monospace;
+    font-size: 20px;
+    margin: 0.5em 0 1em 0;
+}
+
 .grid {
     display: grid;
     width: 660px;
@@ -6,6 +31,7 @@
     grid-column-gap: 1px;
     justify-items: stretch;
     align-items: stretch;
+    margin-bottom: 20px;
 }
 
 .square {
