--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,8 @@ h1 {
 .button {
     font-family: monospace;
     font-size: 20px;
-    margin: 0.5em 0 1em 0;
+    margin: 0.5em 10px 1em 0;
+    display: inline-block;
 }
 
 .grid {
